--- a/Chat_Bot_Alura.ipynb
+++ b/Chat_Bot_Alura.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZWGGV/1m/yFmUgQzeDp2N",
+      "authorship_tag": "ABX9TyO1StOpq0ZABiwCWMpHiQ45",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,11 +51,11 @@
       "source": [
         "# Aqui iremos importar a bibloteca SDK do Google\n",
         "import google.generativeai as genai\n",
-        "# Usado para armazenar com segurança sua chave de API / `google.colab.userdata` para armazenar com segurança a chave da API.\n",
+        "# Usado para armazenar com segurança sua chave de API / `google.colab.userdata`\n",
+        "# para armazenar com segurança a chave da API.\n",
         "from google.colab import userdata\n",
-        "\n",
-        "GOOGLE_API_KEY=\" \"  #aqui a sua api key entre aspas\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "api_key = userdata.get(\"SECRET_KEY\")\n",
+        "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "PsF5Wc2EXZHT"
