--- a/Chat_Bot_Alura.ipynb
+++ b/Chat_Bot_Alura.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1StOpq0ZABiwCWMpHiQ45",
+      "authorship_tag": "ABX9TyMPhcKbjTmBXn2Pp75e+bzO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,24 +43,27 @@
       "metadata": {
         "id": "14xrwvk-UkqF"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Aqui iremos importar a bibloteca SDK do Google\n",
-        "import google.generativeai as genai\n",
-        "# Usado para armazenar com segurança sua chave de API / `google.colab.userdata`\n",
-        "# para armazenar com segurança a chave da API.\n",
+        "# Aqui importaremos a biblioteca SDK do Google\n",
+        "from google import generativeai as genai\n",
+        "# Usado para armazenar com segurança sua chave de API em `google.colab.userdata`\n",
         "from google.colab import userdata\n",
-        "api_key = userdata.get(\"SECRET_KEY\")\n",
+        "\n",
+        "# Cole sua chave da API aqui\n",
+        "api_key = \"COLE_SUA_CHAVE_AQUI\"\n",
+        "\n",
+        "# Configure a biblioteca com a chave da API\n",
         "genai.configure(api_key=api_key)"
       ],
       "metadata": {
         "id": "PsF5Wc2EXZHT"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +126,7 @@
       "metadata": {
         "id": "imrb3vJsXhSC"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +155,7 @@
       "metadata": {
         "id": "EEOaTCJCcuPg"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +187,7 @@
       "metadata": {
         "id": "8gFp3oqQd2NB"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +227,7 @@
       "metadata": {
         "id": "USgJD1y-fRTH"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +336,7 @@
       "metadata": {
         "id": "S4eHykNgkV-2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     }
   ]
