--- a/Chat_Bot__Joao_Paulo_Paiva.ipynb
+++ b/Chat_Bot__Joao_Paulo_Paiva.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+ivWoace2K3RQoqOY8ip6",
+      "authorship_tag": "ABX9TyOS+X4ijvfDYt1TmtdtiQ6H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "from google.colab import userdata\n",
         "\n",
         "# Cole sua chave da API aqui\n",
-        "api_key = \"AIzaSyDbdRHyY-i0yM3Gn1FQUsCAhvXGtvP1Vtc\"\n",
+        "api_key = userdata.get('SECRET_API_KEY')\n",
         "\n",
         "# Configure a biblioteca com a chave da API\n",
         "genai.configure(api_key=api_key)"
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "PsF5Wc2EXZHT"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
